--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development babel-node ./bin/start.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js,.jsx",
+    "fix": "eslint . --ext .js,.jsx --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.23.0",
@@ -18,13 +21,25 @@
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^4.0.0",
     "express": "^4.15.2",
+    "prop-types": "^15.5.8",
     "react": "15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-eslint": "^7.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^4.5.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^6.0.3",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
