--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
@@ -20,15 +21,23 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^4.0.0",
+    "css-loader": "0.23.1",
+    "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.8",
     "react": "15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "0.13.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
     "babel-eslint": "^7.0.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -36,10 +45,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^4.5.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "sass-loader": "^6.0.3",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
