--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-saga": "^0.14.7",
     "sass-loader": "^6.0.3",
     "style-loader": "0.13.1"
   },
@@ -45,7 +47,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
