--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "joke counter",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development babel-node ./bin/start.js",
+    "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node ./bin/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js,.jsx",
     "fix": "eslint . --ext .js,.jsx --fix",
@@ -22,11 +22,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.17.1",
+    "cors": "^2.8.3",
     "cross-env": "^4.0.0",
     "css-loader": "0.23.1",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "multer": "^1.3.0",
+    "node-fetch": "^1.6.3",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.8",
@@ -39,7 +43,8 @@
     "redux-logger": "^3.0.1",
     "redux-saga": "^0.14.7",
     "sass-loader": "^6.0.3",
-    "style-loader": "0.13.1"
+    "style-loader": "0.13.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
@@ -49,7 +54,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "webpack": "^1.13.2",
+    "nodemon": "^1.11.0",
+    "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
   }
