--- a/package.json
+++ b/package.json
@@ -48,13 +48,20 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
+    "bootstrap-loader": "^2.0.0",
+    "bootstrap-sass": "^3.3.7",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "^6.9.0",
+    "exports-loader": "^0.6.4",
+    "file-loader": "^0.11.1",
+    "imports-loader": "^0.7.1",
     "nodemon": "^1.11.0",
+    "resolve-url-loader": "^2.0.2",
+    "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
