--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "parser": "babel-eslint",
   "plugins": [
     "react"
-  ],
+      ],
   "env": {
     "browser": true,
     "node": true,
@@ -22,5 +22,8 @@
     "react/jsx-filename-extension": [0],
     "import/no-named-as-default": [0],
     "linebreak-style": [0]
+  },
+   "globals": {
+    "$": true
   }
 }
