--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jquery": "^3.2.1",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
     "node-sass": "^4.5.2",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
+    "babel-plugin-css-modules-transform": "^1.2.7",
     "bootstrap-loader": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
     "eslint": "^3.15.0",
