--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "joke counter",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=production babel-node ./bin/start",
     "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node ./bin/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js,.jsx",
@@ -28,7 +29,6 @@
     "css-loader": "0.23.1",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.2.1",
     "multer": "^1.3.0",
     "node-fetch": "^1.6.3",
@@ -44,6 +44,7 @@
     "redux-logger": "^3.0.1",
     "redux-saga": "^0.14.7",
     "sass-loader": "^6.0.3",
+    "shelljs": "^0.7.7",
     "style-loader": "0.13.1",
     "whatwg-fetch": "^2.0.3"
   },
@@ -59,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.4",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "imports-loader": "^0.7.1",
     "nodemon": "^1.11.0",
