--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jokecounter",
+  "name": "tracelabel",
   "version": "1.0.0",
-  "description": "joke counter",
+  "description": "TraceLabel",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production babel-node ./bin/start",
@@ -16,33 +16,26 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.11.4",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "body-parser": "^1.17.1",
-    "cors": "^2.8.3",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.0.0",
     "css-loader": "0.23.1",
     "css-modules-require-hook": "^4.0.6",
-    "express": "^4.15.2",
-    "jquery": "^3.2.1",
-    "multer": "^1.3.0",
-    "node-fetch": "^1.6.3",
-    "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.8",
     "react": "15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.1",
-    "redux-saga": "^0.14.7",
+    "redux-saga": "^0.16.0",
     "sass-loader": "^6.0.3",
     "shelljs": "^0.7.7",
     "style-loader": "0.13.1",
@@ -51,8 +44,6 @@
   "devDependencies": {
     "babel-eslint": "^7.0.0",
     "babel-plugin-css-modules-transform": "^1.2.7",
-    "bootstrap-loader": "^2.0.0",
-    "bootstrap-sass": "^3.3.7",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.1",
@@ -60,10 +51,12 @@
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.4",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "imports-loader": "^0.7.1",
-    "nodemon": "^1.11.0",
+    "node-sass": "^4.8.3",
+    "nodemon": "^1.17.2",
     "resolve-url-loader": "^2.0.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
