--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "css-modules-require-hook": "^4.0.6",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.5.8",
-    "react": "15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
