--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.4",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^0.11.1",
     "imports-loader": "^0.7.1",
     "node-sass": "^4.8.3",
