--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tracelabel",
+  "name": "reactreduxstarter",
   "version": "1.0.0",
-  "description": "TraceLabel",
+  "description": "react redux saga starter kit",
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production babel-node ./bin/start",
