--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
