--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "react redux saga starter kit",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production babel-node ./bin/start",
-    "dev": "cross-env NODE_ENV=development nodemon -i app -x babel-node ./bin/start.js",
+    "build": "cross-env NODE_ENV=production babel-node ./bin/start",
+    "start": "cross-env NODE_ENV=development node -r @babel/register ./bin/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .js,.jsx",
     "fix": "eslint . --ext .js,.jsx --fix",
@@ -15,53 +15,63 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.0.0",
-    "css-loader": "0.23.1",
+    "@babel/cli": "^7.8.0",
+    "@babel/core": "^7.8.0",
+    "@babel/polyfill": "^7.8.0",
+    "@babel/preset-env": "^7.8.0",
+    "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.6",
+    "cross-env": "^6.0.0",
+    "css-loader": "3.4.1",
     "css-modules-require-hook": "^4.0.6",
-    "postcss-loader": "^1.3.3",
-    "prop-types": "^15.5.8",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-google-maps": "^9.4.5",
-    "react-redux": "^5.0.4",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.0",
+    "react-router-dom": "^5.1.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.1",
-    "redux-saga": "^0.16.0",
-    "sass-loader": "^6.0.3",
+    "redux-saga": "^1.1.0",
+    "sass-loader": "^8.0.1",
     "shelljs": "^0.7.7",
-    "style-loader": "0.13.1",
-    "whatwg-fetch": "^2.0.3"
+    "style-loader": "1.1.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
+    "@babel/node": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.0",
+    "@babel/preset-react": "^7.8.0",
+    "@babel/preset-typescript": "^7.8.0",
+    "@babel/register": "^7.8.0",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "babel-eslint": "^10.0.0",
     "babel-plugin-css-modules-transform": "^1.2.7",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-loader": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "core-js": "^3.6.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "^7.17.0",
     "exports-loader": "^0.6.4",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^5.0.0",
     "imports-loader": "^0.7.1",
     "node-sass": "^4.8.3",
-    "nodemon": "^1.17.2",
-    "resolve-url-loader": "^2.0.2",
-    "url-loader": "^0.5.8",
-    "webpack": "^4.3.0",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
+    "nodemon": "^2.0.0",
+    "resolve-url-loader": "^3.1.1",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.4",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
