--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/register": "^7.8.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
     "babel-eslint": "^10.0.0",
     "babel-plugin-css-modules-transform": "^1.2.7",
     "babel-preset-react": "^6.24.1",
