--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.1",
     "redux-saga": "^1.1.0",
     "sass-loader": "^8.0.1",
     "shelljs": "^0.7.7",
@@ -46,9 +45,13 @@
     "@babel/preset-react": "^7.8.0",
     "@babel/preset-typescript": "^7.8.0",
     "@babel/register": "^7.8.0",
+    "@types/node": "^13.7.4",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-logger": "^3.0.7",
+    "@types/webpack-env": "^1.15.1",
     "babel-eslint": "^10.0.0",
     "babel-plugin-css-modules-transform": "^1.2.7",
     "babel-preset-react": "^6.24.1",
@@ -66,6 +69,7 @@
     "imports-loader": "^0.7.1",
     "node-sass": "^4.8.3",
     "nodemon": "^2.0.0",
+    "redux-logger": "^3.0.6",
     "resolve-url-loader": "^3.1.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
