--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
+    "@types/redux-saga": "^0.10.5",
     "@types/webpack-env": "^1.15.1",
     "babel-eslint": "^10.0.0",
     "babel-plugin-css-modules-transform": "^1.2.7",
