--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "resolve-url-loader": "^3.1.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
+    "tslint": "^6.0.0",
     "typescript": "^3.7.4",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.0",
